<resources>
    <string name="app_name">DokTor</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="register">Register</string>
    <string name="merk_motor">Merk Motor</string>
    <string name="plat_nomor">Plat nomor</string>
    <string name="plat_nomor_motor">Plat nomor motor</string>
    <string name="nama_pemilik">Nama Pemilik Motor</string>
    <string name="nama_pemilik_motor">Nama Pemilik Motor</string>
    <string name="top_icon">TOP ICON</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">New User? Register Now</string>
</resources>
